@@ -53,26 +53,11 @@ class ApiQueryWatchlist extends ApiQueryGeneratorBase {
 			$fld_notificationtimestamp = false;
 
 	private function run( $resultPageSet = null ) {
-		global $wgUser;
-
 		$this->selectNamedDB( 'watchlist', DB_SLAVE, 'watchlist' );
 
 		$params = $this->extractRequestParams();
-
-		if ( !is_null( $params['owner'] ) && !is_null( $params['token'] ) ) {
-			$user = User::newFromName( $params['owner'], false );
-			if ( !$user->getId() ) {
-				$this->dieUsage( 'Specified user does not exist', 'bad_wlowner' );
-			}
-			$token = $user->getOption( 'watchlisttoken' );
-			if ( $token == '' || $token != $params['token'] ) {
-				$this->dieUsage( 'Incorrect watchlist token provided -- please set a correct token in Special:Preferences', 'bad_wltoken' );
-			}
-		} elseif ( !$wgUser->isLoggedIn() ) {
-			$this->dieUsage( 'You must be logged-in to have a watchlist', 'notloggedin' );
-		} else {
-			$user = $wgUser;
-		}
+		
+		$user = ApiQueryWatchlist::getWatchlistUser( $params );
 
 		if ( !is_null( $params['prop'] ) && is_null( $resultPageSet ) ) {
 			$prop = array_flip( $params['prop'] );
@@ -288,6 +273,30 @@ class ApiQueryWatchlist extends ApiQueryGeneratorBase {
 		}
 
 		return $vals;
+	}
+
+	/**
+	* Gets the user for whom to get the watchlist for
+	*  
+	* @returns User
+	*/
+	public static function getWatchlistUser( $params ) {
+		global $wgUser;
+		if ( !is_null( $params['owner'] ) && !is_null( $params['token'] ) ) {
+			$user = User::newFromName( $params['owner'], false );
+			if ( !$user->getId() ) {
+				$this->dieUsage( 'Specified user does not exist', 'bad_wlowner' );
+			}
+			$token = $user->getOption( 'watchlisttoken' );
+			if ( $token == '' || $token != $params['token'] ) {
+				$this->dieUsage( 'Incorrect watchlist token provided -- please set a correct token in Special:Preferences', 'bad_wltoken' );
+			}
+		} elseif ( !$wgUser->isLoggedIn() ) {
+			$this->dieUsage( 'You must be logged-in to have a watchlist', 'notloggedin' );
+		} else {
+			$user = $wgUser;
+		}
+		return $user;
 	}
 
 	public function getAllowedParams() {
